fastapi-short-code/httpd.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web01
  namespace: shortcode-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpd01
  template:
    metadata:
      labels:
        app: httpd01
    spec:
      containers:
        - name: httpd
          image: httpd:latest
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
  namespace: shortcode-ns
spec:
  selector:
    app: httpd01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
